[tool.poetry]
name = "calendar"
version = "0.1.0"
description = "A CLI utility acting as a substitute for the Calendar GUI. Created with Typer."
authors = ["Aadit Kamat <aadit.k12@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python="^3.6"
black = "^20.8b1"
typer = "^0.3.2"
emoji = "^0.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
